<Add tost message>

--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -68,8 +68,8 @@
           <div class="row" style="    margin-top: 30px">
             <div class=" form-group col-lg-6" style="margin-left: 35px;">
               <label class="label-name ">{{ 'EmployeeId' | translate }}</label>
-              <select class="loginUserid" formControlName="employee">
-                <option *ngFor=" let employee of allEmployee" [value]="employee.id">
+              <select class="loginUserid" formControlName="employee" >
+                <option *ngFor=" let employee of allEmployee" [value]="employee.id" >
                   {{employee.userid}}
                 </option>
               </select>
@@ -78,7 +78,7 @@
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
                 <label class="label-name "> {{ 'Intime' | translate }}</label>
-                <input type="time" *ngIf="attendanceForm.get('intime')" step="0" id="intime" formControlName="intime" class="loginUserid">
+                <input type="time"  step="0" id="intime" formControlName="intime" class="loginUserid">
                 <app-control-messages [control]="attendanceForm.controls.intime"></app-control-messages>
               </div>
             </div>
@@ -87,21 +87,20 @@
             <div class=" form-group col-lg-6" style="margin-left: 35px;">
               <label class="label-name ">{{ 'Outtime' | translate }}</label>
               <br>
-              <input type="time" *ngIf="attendanceForm.get('outtime')" step="0" formControlName="outtime" class="loginUserid">
+              <input type="time"  step="0" formControlName="outtime" class="loginUserid">
               <app-control-messages [control]="attendanceForm.controls.outtime"></app-control-messages>
             </div>
 
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
                 <label class="label-name "> {{ 'Date' | translate }}</label>
-                <input type="date" *ngIf="attendanceForm.get('date')" formControlName="date" class="loginUserid">
+                <input type="date"  formControlName="date" class="loginUserid">
                 <app-control-messages [control]="attendanceForm.controls.date" [group]="attendanceForm"></app-control-messages>
-
               </div>
             </div>
           </div>
           <div class="savebtn">
-            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid" (click)="myFunction()">{{'Save'|translate}}</button>
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid" (click)="toastMessageDisplay()">{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
       margin-left: 20px;">Close</button>
           </div>
