--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -41,4 +41,4 @@
 
   </div>
 </form>
-<div id="snackbar"[innerHTML]="toastMessage"></div>
+<div style="margin-right: -50px" id="snackbar"[innerHTML]="toastMessage"></div>
