--- a/src/app/components/daily-task/daily-task.component.html
+++ b/src/app/components/daily-task/daily-task.component.html
@@ -43,6 +43,7 @@
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <form [formGroup]="dailyTaskForm" (ngSubmit)="onDailyTaskFormSubmit()">
     <div class="modal-dialog modaldialog">
+        <div id="snackbar"[innerHTML]="toastMessage"></div>
       <div class="modal-content">
         <div class="modal-header dialog">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -63,7 +64,7 @@
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
                 <label class="label-name "> {{ 'Date' | translate }}</label>
-                <input type="date" *ngIf="dailyTaskForm.get('date')" formControlName="date" class="loginUserid">
+                <input type="date"  formControlName="date" class="loginUserid">
                 <app-control-messages [control]="dailyTaskForm.controls.date"></app-control-messages>
               </div>
             </div>
@@ -72,14 +73,14 @@
             <div class=" form-group col-lg-6" style="margin-left: 35px;">
               <label class="label-name ">{{ 'TaskName' | translate }}</label>
               <br>
-              <input type="text" *ngIf="dailyTaskForm.get('taskName')" formControlName="taskName" class="loginUserid">
+              <input type="text"  formControlName="taskName" class="loginUserid">
               <app-control-messages [control]="dailyTaskForm.controls.taskName"></app-control-messages>
             </div>
 
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
                 <label class="label-name "> {{ 'EstimationTime' | translate }}</label>
-                <input type="time" *ngIf="dailyTaskForm.get('estimationTime')" step="0" formControlName="estimationTime" class="loginUserid">
+                <input type="time"  step="0" formControlName="estimationTime" class="loginUserid">
                 <app-control-messages [control]="dailyTaskForm.controls.estimationTime"></app-control-messages>
               </div>
             </div>
@@ -88,14 +89,14 @@
             <div class=" form-group col-lg-6" style="margin-left: 35px;">
               <label class="label-name ">{{ 'StartTime' | translate }}</label>
               <br>
-              <input type="time" *ngIf="dailyTaskForm.get('starttime')" step="0" formControlName="starttime" class="loginUserid">
+              <input type="time"  step="0" formControlName="starttime" class="loginUserid">
               <app-control-messages [control]="dailyTaskForm.controls.starttime"></app-control-messages>
             </div>
 
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
                 <label class="label-name "> {{ 'EndTime' | translate }}</label>
-                <input type="time" *ngIf="dailyTaskForm.get('endtime')" step="0" formControlName="endtime" class="loginUserid">
+                <input type="time"  step="0" formControlName="endtime" class="loginUserid">
                 <app-control-messages [control]="dailyTaskForm.controls.endtime"></app-control-messages>
               </div>
             </div>
@@ -122,7 +123,7 @@
           </div>
 
           <div class="savebtn">
-            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!dailyTaskForm.valid">{{'Save'|translate}}</button>
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!dailyTaskForm.valid" (click)="toastMessageDisplay()">{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;margin-left: 20px;">Close</button>
           </div>
         </div>
