--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -163,3 +163,25 @@ h1 {
   
   animation: spin 2s linear infinite;
 }
+#snackbar {
+    z-index: 1;
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: 200px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    top: 50px;
+    left: 60%;
+    font-size: 17px;
+}
+
+#snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
