--- a/src/app/components/usertype/usertype.component.html
+++ b/src/app/components/usertype/usertype.component.html
@@ -48,6 +48,7 @@
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <form [formGroup]="usertypeForm" (ngSubmit)="onUserTypeFormSubmit()">
     <div class="modal-dialog modaldialog">
+        <div id="snackbar"[innerHTML]="toastMessage"></div>
       <div class="modal-content" style="    height: 500px;">
         <div class="modal-header dialog">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -58,7 +59,7 @@
             <div class=" form-group col-lg-6" style="margin-left: 35px;">
               <label class="label-name ">{{ 'Name' | translate }}</label>
               <br>
-              <input type="text" *ngIf="usertypeForm.get('usertypeName')" formControlName="usertypeName" id="usertypeName" name="usertypeName"
+              <input type="text"  formControlName="usertypeName" id="usertypeName" name="usertypeName"
                 class="loginUserid" placeholder="Name">
               <app-control-messages [control]="usertypeForm.controls.usertypeName"></app-control-messages>
             </div>
@@ -73,7 +74,7 @@
             </div>
           </div>
           <div class="savebtn">
-            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!usertypeForm.valid" >{{'Save'|translate}}</button>
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!usertypeForm.valid" (click)="toastMessageDisplay()" >{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
         margin-left: 20px;">{{'Close'|translate}}</button>
           </div>
