--- a/src/app/components/usertype/usertype.component.css
+++ b/src/app/components/usertype/usertype.component.css
@@ -23,16 +23,10 @@
    border-radius: 1px;
   
 }
-
-#usertypeForm.has-error .control-label,
-#usertypeForm.has-error .help-block,
-#usertypeForm.has-error .form-control-feedback {
-    color: #a94442;
-}
-
-/* Color of valid field */
-#usertypeForm.has-success .control-label,
-#usertypeForm.has-success .help-block,
-#usertypeForm.has-success .form-control-feedback {
-    color: #3c763d;
-}
+.ng-valid[required], .ng-valid.required  {
+    border-left: 5px solid #42A948; /* green */
+  }
+  
+  .ng-invalid:not(form)  {
+    border-left: 5px solid #c22b29; /* red */
+  }
